[gd_scene load_steps=4 format=2]

[ext_resource path="res://Galou.gd" type="Script" id=1]
[ext_resource path="res://GearGrid.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI.tscn" type="PackedScene" id=3]

[node name="Galou" type="Node2D"]
script = ExtResource( 1 )

[node name="GearGrid" parent="." instance=ExtResource( 2 )]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" parent="UILayer" instance=ExtResource( 3 )]
[connection signal="board_clamped" from="." to="UILayer/UI" method="_on_Galou_board_clamped"]
[connection signal="board_done" from="." to="UILayer/UI" method="_on_Galou_board_done"]
[connection signal="resolve_available" from="." to="UILayer/UI" method="_on_Galou_resolve_available"]
[connection signal="change_gear" from="UILayer/UI" to="." method="_on_UI_change_gear"]
[connection signal="next_board" from="UILayer/UI" to="." method="_on_UI_next_board"]
[connection signal="prev_board" from="UILayer/UI" to="." method="_on_UI_prev_board"]
[connection signal="solve" from="UILayer/UI" to="." method="_on_UI_solve"]
